--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Gandul ❤️ Milea - 29.10.2028</title>
+	<title>Gandul ❤️ Rahma - 29.10.2028</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it." />
 	<meta name="keywords" content="shyam,rincy,wedding,website,rsvp" />
@@ -176,13 +176,13 @@
 					</li>
 
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS2.jpg); "> 
-						<a href="images/RS2.jpg">
+						<a href="images/poto1.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS3.jpg); "> 
-						<a href="images/RS3.jpg">
+						<a href="images/poto1.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
