--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Shyam &amp; Rincy</h1>
+							<h1>Gandi &amp; Rahma</h1>
 							<br>
 							<img src="images/fprint.png" alt="Shyam + Rincy"> 
-							<h2>29.10.2023</h2>
+							<h2>29.10.2028</h2>
 							<h2>"I have found the one whom my soul loves." <br>Song of Solomon 3:4</h2>
 							<div class="flipTimebox">
 								<div class="clock clock-fix"></div>
@@ -122,7 +122,7 @@
 									<h3>Betrothal</h3>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>21 October 2023</span>
+										<span>21 October 2028</span>
 									</div>
 									<div class="event-col">
 
@@ -138,7 +138,7 @@
 									<h3>Wedding</h3>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>29 October 2023</span>
+										<span>29 October 2028</span>
 									</div>
 									<div class="event-col">
 
