--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<ul id="fh5co-gallery-list">
 						
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS1.jpg); "> 
-						<a href="images/RS1.jpg">
+						<a href="images/poto1.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
