--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Gandul ❤️ Rahma - 29.10.2028</title>
+	<title>Gandul ❤️ Rahma - 02.03.2023</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it." />
 	<meta name="keywords" content="shyam,rincy,wedding,website,rsvp" />
@@ -14,9 +14,9 @@
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:image" content="images/og.jpg"/>
-	<meta property="og:site_name" content="Shyam ❤️ Rincy - 29.10.2023">
-    <meta property="og:title" content="Shyam ❤️ Rincy - 29.10.2023">
-    <meta property="og:description" content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it.">
+	<meta property="og:site_name" content="Gandi ❤️ Rahma - 02.03.2023">
+    <meta property="og:title" content="Gandi ❤️ Rahma - 02.03.2023">
+    <meta property="og:description" content="Hari Jadian Kita 02.03.2023">
 	<!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
@@ -90,8 +90,8 @@
 							<h1>Gandi &amp; Rahma</h1>
 							<br>
 							<img src="images/fprint.png" alt="Shyam + Rincy"> 
-							<h2>29.10.2028</h2>
-							<h2>"I have found the one whom my soul loves." <br>Song of Solomon 3:4</h2>
+							<h2>03.02.2023</h2>
+							<h2>"Aku telah menemukan orang yang dicintai jiwaku." <br>Tasikmalaya 2023</h2>
 							<div class="flipTimebox">
 								<div class="clock clock-fix"></div>
 							  </div>
