--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 										<i class="icon-clock"></i>
 										<span>11:30 AM</span>
 									</div>
-									<p>Chat <b>Whatsapp <b>Romansa SMK.</b></p>
+									<p>Chat Whatsapp <b>Romansa SMK.</b></p>
 									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3903.673315773661!2d75.71257847590881!3d11.927808088299846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba5cd2b69442ebf%3A0x41b4e77a403a15b4!2sDe%20Paul%20Church%2C%20Edathotty!5e0!3m2!1sen!2sin!4v1696094112600!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
 							</div>
@@ -145,7 +145,7 @@
 										<i class="icon-clock"></i>
 										<span>06:00 AM</span>
 									</div>
-									<p>Di <b>Halte <b>Jl. Raya Rajapolah - Tasikmalaya No.18, Jatihurip, Kec. Cisayong, Kabupaten Tasikmalaya, Jawa Barat 46153</b></p>
+									<p>Di <b>Halte <b>Jl. Raya Rajapolah</b></p>
 						<iframe src="https://www.google.com/maps/embed?pb=!3m2!1sid!2sid!4v1752228776422!5m2!1sid!2sid!6m8!1m7!1sGwXDJpPBf0E28OQ33CRCmA!2m2!1d-7.266551868792545!2d108.1863904558354!3f253.91322143396846!4f-19.002372798913996!5f0.7820865974627469" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
 							</div>
