--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li class="active"><a href="#fh5co-event">Events</a></li>
+						<li class="active"><a href="#fh5co-event">Important Day</a></li>
 						<li class="active"><a href="#fh5co-gallery">Gallery</a></li>
 						<li class="active"><a href="#fh5co-services">Highlights</a></li>
 					</ul>
@@ -110,7 +110,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Events</h2>
+					<h2>Important Day</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -129,7 +129,7 @@
 										<i class="icon-clock"></i>
 										<span>11:30 AM</span>
 									</div>
-									<p>Chat Whatsapp <b>Romansa SMK.</b></p>
+									<p>Chat Whatsapp <b>Romansa Sekolah.</b></p>
 									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3903.673315773661!2d75.71257847590881!3d11.927808088299846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba5cd2b69442ebf%3A0x41b4e77a403a15b4!2sDe%20Paul%20Church%2C%20Edathotty!5e0!3m2!1sen!2sin!4v1696094112600!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
 							</div>
@@ -301,24 +301,21 @@
 		});
 
 		document.addEventListener("DOMContentLoaded", function () {
-		const futureDate = new Date(2025, 5, 11, 12, 0, 0).getTime();
-
-		const clock = $('.clock').FlipClock((futureDate - new Date().getTime()) / 1000, {
-			countdown: true,
-			clockFace: 'DailyCounter'
+			const startDate = new Date(2023, 3, 2, 12, 0, 0).getTime(); // waktu mulai
+			const clock = $('.clock').FlipClock(0, {
+				countdown: false,
+				clockFace: 'DailyCounter'
+			});
+		
+			setInterval(function () {
+				const now = new Date().getTime();
+				const diff = (now - startDate) / 1000; // waktu yang sudah lewat
+				if (diff >= 0) {
+					clock.setTime(diff);
+				}
+			}, 1000);
 		});
 
-		setInterval(function () {
-			const now = new Date().getTime();
-			const diff = (futureDate - now) / 1000;
-			if (diff <= 0) {
-			clock.setTime(0);
-			clock.stop();
-			} else {
-			clock.setTime(diff);
-			}
-		}, 1000);
-		});
 
 
 	  </script>
