--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 			</div>
 			<div class="row row-bottom-padded-md">
 				<div class="col-md-12">
-					<ul class="case-studies clearfix">
+					<ul class="fh5co-gallery-list">
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/poto1.jpg); "> 
 						<a href="images/poto1.jpg">
 							<div class="case-studies-summary">
