--- a/index.html
+++ b/index.html
@@ -235,28 +235,28 @@
 					<img src="images/poto1.jpg" alt="images/poto1.jpg" />
 				</div>
 				<div class="masonry-item">
-					<img src="images/IMAGE.png" alt="Light beige geometric pattern texture" />
+					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Light beige geometric pattern texture" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/POP.png" alt="Animated pattern GIF" />
+					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/JI.png" alt="Animated pattern GIF" />
+					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/IMAGE.png" alt="Animated pattern GIF" />
+					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item">
 					<img src="images/poto1.jpg" alt="White Porsche 911 turbo car illustration" />
 				</div>
 				<div class="masonry-item">
-					<img src="images/POP.png" alt="White Porsche 911 turbo car illustration" />
+					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="White Porsche 911 turbo car illustration" />
 				</div>
 				<div class="masonry-item">
-					<img src="images/IMAGE.png" alt="Light beige geometric pattern texture" />
+					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Light beige geometric pattern texture" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
@@ -264,7 +264,7 @@
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/POP.png" alt="Animated pattern GIF" />
+					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
