--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Gandi &amp; Rahma</h1>
 							<br>
-							<img src="images/fprint.png" alt="Shyam + Rincy"> 
+							<img src="images/fprint.png" alt="Gandi + Rahma"> 
 							<h2>03.02.2023</h2>
 							<h2>"Aku telah menemukan orang yang dicintai jiwaku." <br>Tasikmalaya 2023</h2>
 							<div class="flipTimebox">
