--- a/index.html
+++ b/index.html
@@ -377,20 +377,19 @@
 		});
 
 		document.addEventListener("DOMContentLoaded", function () {
-			const startDate = new Date(2023, 3, 2, 12, 0, 0).getTime(); // waktu mulai
-			const clock = $('.clock').FlipClock(0, {
-				countdown: false,
-				clockFace: 'DailyCounter'
-			});
-		
-			setInterval(function () {
-				const now = new Date().getTime();
-				const diff = (now - startDate) / 1000; // waktu yang sudah lewat
-				if (diff >= 0) {
-					clock.setTime(diff);
-				}
-			}, 1000);
+		const startDate = new Date(2023, 3, 2, 12, 0, 0).getTime(); // 2 April 2023, 12:00
+		const now = new Date().getTime();
+		const diff = Math.floor((now - startDate) / 1000); // dalam detik
+	
+		console.log("Total detik:", diff);
+		console.log("Total hari:", Math.floor(diff / 86400));
+	
+		const clock = $('.clock').FlipClock(diff, {
+			countdown: false,
+			clockFace: 'DailyCounter',
+			autoStart: true // penting supaya jalan otomatis
 		});
+});
 
 
 
