--- a/index.html
+++ b/index.html
@@ -232,46 +232,46 @@
 		<div  class="col-md-12">
 			<div style="justify-content: center;" class="masonry container">
 				<div class="masonry-item">
-					<img src="images/poto1.jpg" alt="images/poto1.jpg" />
+					<img src="images/poto1.jpg" alt="Poto Studio Kelulusan" />
 				</div>
 				<div class="masonry-item">
-					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Light beige geometric pattern texture" />
+					<img src="images/PICTURE 1" alt="" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 2" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 3" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 4" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item">
-					<img src="images/poto1.jpg" alt="White Porsche 911 turbo car illustration" />
+					<img src="images/PICTURE 5" alt="White Porsche 911 turbo car illustration" />
 				</div>
 				<div class="masonry-item">
-					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="White Porsche 911 turbo car illustration" />
+					<img src="images/PICTURE 6" alt="White Porsche 911 turbo car illustration" />
 				</div>
 				<div class="masonry-item">
-					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Light beige geometric pattern texture" />
+					<img src="images/PICTURE 7" alt="Light beige geometric pattern texture" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/poto1.jpg" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 8" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 9" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="https://placehold.co/260x260?text=Animated+Pattern+GIF" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 10" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item">
-					<img src="https://placehold.co/260x174?text=911+Turbo+Car+Illustration" alt="White Porsche 911 turbo car illustration" />
+					<img src="11" />
 				</div>
 			</div>
 		</div>
