--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
 					<img src="images/poto1.jpg" alt="Poto Studio Kelulusan" />
 				</div>
 				<div class="masonry-item">
-					<img src="images/PICTURE 1" alt="" />
+					<img src="images/PICTURE 1.jpg" alt="" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/PICTURE 2" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 2.jpg" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
@@ -247,31 +247,31 @@
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/PICTURE 4" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 4.jpg" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item">
-					<img src="images/PICTURE 5" alt="White Porsche 911 turbo car illustration" />
+					<img src="images/PICTURE 5.jpg" alt="White Porsche 911 turbo car illustration" />
 				</div>
 				<div class="masonry-item">
-					<img src="images/PICTURE 6" alt="White Porsche 911 turbo car illustration" />
+					<img src="images/PICTURE 6.jpg" alt="White Porsche 911 turbo car illustration" />
 				</div>
 				<div class="masonry-item">
-					<img src="images/PICTURE 7" alt="Light beige geometric pattern texture" />
+					<img src="images/PICTURE 7.jpg" alt="Light beige geometric pattern texture" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/PICTURE 8" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 8.jpg" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/PICTURE 9" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 9.jpg" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/PICTURE 10" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 10.jpg" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item">
-					<img src="11" />
+					<img src="images/PICTURE 11.jpg" />
 				</div>
 			</div>
 		</div>
