--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/PICTURE 3" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 3.jpg" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
