--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
 					<img src="images/poto1.jpg" alt="Poto Studio Kelulusan" />
 				</div>
 				<div class="masonry-item">
-					<img src="images/PICTURE 1.jpg" alt="" />
+					<img src="images/PICTURE 1.JPG" alt="" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/PICTURE 2.jpg" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 2.webp" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
-					<img src="images/PICTURE 3.jpg" alt="Animated pattern GIF" />
+					<img src="images/PICTURE 3.webp" alt="Animated pattern GIF" />
 				</div>
 				<div class="masonry-item" style="position: relative;">
 					<span class="gif-label">GIF</span>
