--- a/index.html
+++ b/index.html
@@ -228,28 +228,53 @@
 		</div>
 	</div>
 
-	
-
-	<div class="love-container">
-	  <img src="images/poto1.jpg" class="img1" />
-	  <img src="images/PICTURE 1.JPG" class="img2" />
-	  <img src="images/PICTURE 2.webp" class="img3" />
-	  <img src="images/PICTURE 3.webp" class="img4" />
-	  <img src="images/PICTURE 4.jpg" class="img5" />
-	  <img src="images/PICTURE 5.jpg" class="img6" />
-	  <img src="images/PICTURE 6.jpg" class="img7" />
-	  <img src="images/PICTURE 7.jpg" class="img8" />
-	  <img src="images/PICTURE 8.jpg" class="img9" />
-	  <img src="images/PICTURE 9.jpg" class="img10" />
-	  <img src="images/PICTURE 10.jpg" class="img11" />
-	  <img src="images/PICTURE 11.jpg" class="img12" />
-	  <img src="images/poto1.jpg" class="img13" />
-	  <img src="images/PICTURE 1.JPG" class="img14" />
-	  <img src="images/PICTURE 2.webp" class="img15" />
-	  <img src="images/PICTURE 3.webp" class="img16" />
-	  <img src="images/PICTURE 4.jpg" class="img17" />
-	  <img src="images/PICTURE 5.jpg" class="img18" />
-	  <img src="images/PICTURE 6.jpg" class="img19" />
+	<div  class="row row-bottom-padded-md fh5co-section-gray">
+		<div  class="col-md-12">
+			<div style="justify-content: center;" class="masonry container">
+				<div class="masonry-item">
+					<img src="images/poto1.jpg" alt="Poto Studio Kelulusan" />
+				</div>
+				<div class="masonry-item">
+					<img src="images/PICTURE 1.JPG" alt="" />
+				</div>
+				<div class="masonry-item" style="position: relative;">
+					<span class="gif-label">GIF</span>
+					<img src="images/PICTURE 2.webp" alt="Animated pattern GIF" />
+				</div>
+				<div class="masonry-item" style="position: relative;">
+					<span class="gif-label">GIF</span>
+					<img src="images/PICTURE 3.webp" alt="Animated pattern GIF" />
+				</div>
+				<div class="masonry-item" style="position: relative;">
+					<span class="gif-label">GIF</span>
+					<img src="images/PICTURE 4.jpg" alt="Animated pattern GIF" />
+				</div>
+				<div class="masonry-item">
+					<img src="images/PICTURE 5.jpg" alt="White Porsche 911 turbo car illustration" />
+				</div>
+				<div class="masonry-item">
+					<img src="images/PICTURE 6.jpg" alt="White Porsche 911 turbo car illustration" />
+				</div>
+				<div class="masonry-item">
+					<img src="images/PICTURE 7.jpg" alt="Light beige geometric pattern texture" />
+				</div>
+				<div class="masonry-item" style="position: relative;">
+					<span class="gif-label">GIF</span>
+					<img src="images/PICTURE 8.jpg" alt="Animated pattern GIF" />
+				</div>
+				<div class="masonry-item" style="position: relative;">
+					<span class="gif-label">GIF</span>
+					<img src="images/PICTURE 9.jpg" alt="Animated pattern GIF" />
+				</div>
+				<div class="masonry-item" style="position: relative;">
+					<span class="gif-label">GIF</span>
+					<img src="images/PICTURE 10.jpg" alt="Animated pattern GIF" />
+				</div>
+				<div class="masonry-item">
+					<img src="images/PICTURE 11.jpg" />
+				</div>
+			</div>
+		</div>
 	</div>
 
 		
