--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 										<span>06:00 AM</span>
 									</div>
 									<p>Di <b>Halte <b>Jl. Raya Rajapolah</b></p>
-						<iframe src="https://www.google.com/maps/embed?pb=!3m2!1sid!2sid!4v1752228776422!5m2!1sid!2sid!6m8!1m7!1sGwXDJpPBf0E28OQ33CRCmA!2m2!1d-7.266551868792545!2d108.1863904558354!3f253.91322143396846!4f-19.002372798913996!5f0.7820865974627469" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!3m2!1sid!2sid!4v1752228776422!5m2!1sid!2sid!6m8!1m7!1sGwXDJpPBf0E28OQ33CRCmA!2m2!1d-7.266551868792545!2d108.1863904558354!3f253.91322143396846!4f-19.002372798913996!5f0.7820865974627469" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
 							</div>
 						</div>
